--- a/packages/probing-frontend/src/index.css
+++ b/packages/probing-frontend/src/index.css
@@ -6,6 +6,7 @@ body,
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+  font-family: 'Titillium Web', sans-serif !important;
 }
 
 /*
